<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PetDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_yellow_bg"
    tools:context=".ui.settings.petsInfo.PetDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="寵物資料變更"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="主人名稱" />

            <EditText
                android:id="@+id/ownerNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@color/white"
                android:focusable="false"
                android:ems="10"
                android:hint="主人名稱"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:paddingVertical="10dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_name" />

            <EditText
                android:id="@+id/detailPetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/pet_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:paddingVertical="10dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_age" />

            <EditText
                android:id="@+id/detailPetAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/pet_age"
                android:inputType="number"
                android:padding="15dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_type" />

            <EditText
                android:id="@+id/editTextTextPetTypeDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/pet_type"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:paddingVertical="10dp" />

            <RadioGroup
                android:id="@+id/detailPetGenderGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/detailMaleRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:text="公" />

                <RadioButton
                    android:id="@+id/detailFemaleRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:text="母" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/detailPetSubmitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/dark_yellow_btn"
                android:text="儲存" />
            <Button
                android:id="@+id/detailPetDeleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/dark_yellow_btn"
                android:text="刪除" />
            <Button
                android:id="@+id/detailPetCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/dark_yellow_btn"
                android:text="取消" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>